todo tracking updates